# skyline-client-server

./: .clangd  .dockerignore  .gitignore  CHANGELOG.MD  CMakeLists.txt  Dockerfile  README.MD  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-docker.yaml  build-native-linux.yaml  build-native-win.yaml  build-ts-linux.yaml  release.yaml
config/: config.json
docs/: Log.md  benchmark.md  性能优化.md  提示词.md
docs/ShadowNode/: Image.txt  Input.txt  ScrollView.txt  StickyHeader.txt  Swiper.txt
scripts/ci/: docker-prepare.sh  native-linux.sh  native-windows.ps1  pack-linux.sh
scripts/prepare/: nwjs.ps1  nwjs.sh
src/: base_client.cc  main.cc  skyline_debug_info.cc  skyline_global.cc  skyline_global.hh  skyline_shell.cc  skyline_shell.hh  websocket.cc  websocket.hh
src/client/: CMakeLists.txt  base_client.cc  client.cc  crash_handler.cc  skyline_debug_info.cc  skyline_global.cc  skyline_shell.cc  skyline_shell.hh  websocket.cc  websocket.hh
src/client/include/: async_style_sheets.hh  base_client.hh  fragment_binding.hh  mutable_value.hh  page_context.hh  view_shadow_node.hh
src/client/skyline_global/: async_style_sheets.cc  async_style_sheets.hh  fragment_binding.cc  gesture_handler_module.cc  mutable_value.cc  page_context.cc  page_context.hh  runtime.cc  view_shadow_node.cc  worklet_module.cc  worklet_module.hh
src/client/skyline_global/shadow_node/: grid_view.cc  hero.cc  image.cc  image.hh  list_view.cc  list_view.hh  node.cc  node.hh  scroll_view.cc  scroll_view.hh  sticky_header.cc  sticky_header.hh  sticky_section.cc  swiper.cc  swiper.hh  swiper_item.cc  text.cc  text.hh  view.cc
src/common/: console.cc  (+3 more)
temp/: GridView.txt  text.txt
test/: client.js  for-test.js  jsValue-test.js  server.sh  skyline.js  websocket-server.js  webview.test.ts
tools/: benchmark.js  build-docker-image.sh  docker-run.sh  parse-config.js  prepare.sh  run-server.sh  xvfb-startup.sh
(+17 files in other folders)
